Resolved tooltip flickering

--- a/src/main/resources/public/css/main.css
+++ b/src/main/resources/public/css/main.css
@@ -128,3 +128,8 @@ body {
         display: none;
     }
 }
+
+.tooltip{
+    pointer-events: none;
+    z-index: 2000;   
+}
